fix, adjust spacing between hero buttons and text

--- a/styles/index.css
+++ b/styles/index.css
@@ -17,8 +17,6 @@ body{
     background-color:#F9F1F2 ;
     padding: 10px 20px;
     margin: 48px auto;
-    
-    
 }
 .nav-links{
 display: flex;
@@ -29,7 +27,6 @@ margin-right: 25px;
 .nav-links a{
     text-decoration: none;
     color:#130C0D ;
-
 }
 .logo-group{
     display: flex;
@@ -37,4 +34,53 @@ margin-right: 25px;
     align-items: center;
     font-weight: 400px;
     margin-left: 60px;
+}
+.hero{
+    display: flex;
+    max-width: 1200px;
+    align-items: center;
+    justify-content: space-between;
+    margin: 80px auto;
+    padding: 0 20px;
+
+}
+.hero-content{
+    flex: 1;
+}
+.hero-content h1{
+    font-size: 4.5rem;
+    font-weight: 800;
+    line-height: 1;
+    margin-bottom: 10px;
+    
+}
+.hero-content h2{
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin-top: 30px;
+    margin-bottom: 8px;
+    }
+
+.hero-button{
+    display: flex;
+    gap: 34px;
+    margin-top:43px ;
+}
+    
+
+.btn-buy{
+    background-color:#3D262A ;
+    color:#F9F1F2 ;
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 20px 46px;
+
+}
+.btn-learn{
+    background-color:#D9D9D9 ;
+    color:#3D262A ;
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 20px 46px;
+
 }
